working on landing page responsivity alignment correct

--- a/Todo_App/static/css/styles.css
+++ b/Todo_App/static/css/styles.css
@@ -51,10 +51,19 @@ body {
 
 
 
-.column {
+.column1 {
     float: left;
-    width: 50%;
+    width: 40%;
+    margin-left: 5%;
+    margin-top: 2em;
 }
+
+.column2 {
+    float: left;
+    width: 55%;
+}
+
+
 
 /* Clear floats after the columns */
 .row:after {
